# Component_Library_Plugin

./: .gitignore  .pre-commit-config.yaml  Init.py  InitGui.py  LICENSE  README.md  app.py  pyproject.toml
component_library/: __init__.py  abstraction.py  component_item_view.py  utils.py
component_library/api/: __init__.py  component_management_system.py  requests.py
component_library/components/: __init__.py  item.py  overlay.py
component_library/controller/: __init__.py  downloader.py  manager_interface.py  page.py  queries.py  query.py
component_library/data/: __init__.py  data.py
component_library/manager/: __init__.py  browser.py  downloader.py  page.py  query.py
component_library/network/: __init__.py  downloader.py  network_manager.py
component_library/ui/: Ui_plugin.py
component_library/views/: __init__.py  detailed_view.py  items_view.py  items_widget.py  page.py
component_library_plugin/: __init__.py
local_storage/: data.json
local_storage/14soic-n/: metadata.json
local_storage/2-4_tft_spi_240x320/: metadata.json
local_storage/2020_corner_bracket/: metadata.json
local_storage/2020x50_v_slot_profile/: metadata.json
local_storage/3.5_rpi_tft_display_spi_480x320/: metadata.json
local_storage/3pin-female-2.54mm-connector/: metadata.json
local_storage/lcd-4x20-backlight/: metadata.json
src/: __init__.py  config.py  logging.py  main.py  utils.py
src/addon_window/: __init__.py  window.py
src/api/: __init__.py  base_api.py  base_query.py
src/config/: __init__.py  config.py  settings.py
src/data/: __init__.py  data.py  (+4 more)
(+188 files in other folders)
