[tool.poetry]
name = "component-library-plugin"
version = "0.1.0"
description = ""
authors = ["Amulya Paritosh <amulya1171@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = "^6.5.1.1"
certifi = "^2023.5.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
